--- a/genindex.html
+++ b/genindex.html
@@ -312,6 +312,13 @@ document.write(`
         <li><a href="automol/util.html#module-automol.util.ring">module</a>
 </li>
       </ul></li>
+      <li>
+    automol.util.tensor
+
+      <ul>
+        <li><a href="automol/util.html#module-automol.util.tensor">module</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -320,11 +327,13 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.heuristic.bond_distance">bond_distance() (in module automol.util.heuristic)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.heuristic.bond_distance_limit">bond_distance_limit() (in module automol.util.heuristic)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.breakby">breakby() (in module automol.util)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.tensor.build_full_array">build_full_array() (in module automol.util.tensor)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -374,11 +383,13 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/inchi_key.html#automol.inchi_key.first_hash">first_hash() (in module automol.inchi_key)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.flatten">flatten() (in module automol.util)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.formula_from_symbols">formula_from_symbols() (in module automol.util)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.tensor.from_string">from_string() (in module automol.util.tensor)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -411,6 +422,8 @@ document.write(`
         <li><a href="automol/util.html#module-automol.util.matrix">automol.util.matrix</a>
 </li>
         <li><a href="automol/util.html#module-automol.util.ring">automol.util.ring</a>
+</li>
+        <li><a href="automol/util.html#module-automol.util.tensor">automol.util.tensor</a>
 </li>
       </ul></li>
   </ul></td>
@@ -461,13 +474,21 @@ document.write(`
 </li>
       <li><a href="automol/inchi_key.html#automol.inchi_key.second_hash_with_extension">second_hash_with_extension() (in module automol.inchi_key)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.separate_negatives">separate_negatives() (in module automol.util)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.sort_by_list">sort_by_list() (in module automol.util)</a>
 </li>
       <li><a href="automol/util.html#automol.util.matrix.string">string() (in module automol.util.matrix)</a>
+
+      <ul>
+        <li><a href="automol/util.html#automol.util.tensor.string">(in module automol.util.tensor)</a>
+</li>
+      </ul></li>
+      <li><a href="automol/util.html#automol.util.tensor.string_submat_3d">string_submat_3d() (in module automol.util.tensor)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.tensor.string_submat_4d">string_submat_4d() (in module automol.util.tensor)</a>
 </li>
   </ul></td>
 </tr></table>
