--- a/genindex.html
+++ b/genindex.html
@@ -265,16 +265,24 @@ document.write(`
  | <a href="#I"><strong>I</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
+ | <a href="#O"><strong>O</strong></a>
  | <a href="#P"><strong>P</strong></a>
  | <a href="#R"><strong>R</strong></a>
  | <a href="#S"><strong>S</strong></a>
  | <a href="#T"><strong>T</strong></a>
+ | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
  
 </div>
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.angle">angle() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.vector.arbitrary_unit_perpendicular">arbitrary_unit_perpendicular() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.vector.are_parallel">are_parallel() (in module automol.util.vector)</a>
+</li>
       <li>
     automol.inchi_key
 
@@ -319,18 +327,27 @@ document.write(`
         <li><a href="automol/util.html#module-automol.util.tensor">module</a>
 </li>
       </ul></li>
+      <li>
+    automol.util.vector
+
+      <ul>
+        <li><a href="automol/util.html#module-automol.util.vector">module</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
 <h2 id="B">B</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/util.html#automol.util.heuristic.bond_distance">bond_distance() (in module automol.util.heuristic)</a>
+      <li><a href="automol/util.html#automol.util.vector.best_unit_perpendicular">best_unit_perpendicular() (in module automol.util.vector)</a>
 </li>
-      <li><a href="automol/util.html#automol.util.heuristic.bond_distance_limit">bond_distance_limit() (in module automol.util.heuristic)</a>
+      <li><a href="automol/util.html#automol.util.heuristic.bond_distance">bond_distance() (in module automol.util.heuristic)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.heuristic.bond_distance_limit">bond_distance_limit() (in module automol.util.heuristic)</a>
+</li>
       <li><a href="automol/util.html#automol.util.breakby">breakby() (in module automol.util)</a>
 </li>
       <li><a href="automol/util.html#automol.util.tensor.build_full_array">build_full_array() (in module automol.util.tensor)</a>
@@ -341,14 +358,16 @@ document.write(`
 <h2 id="C">C</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.central_angle">central_angle() (in module automol.util.vector)</a>
+</li>
       <li><a href="automol/util.html#automol.util.ring.cycle">cycle() (in module automol.util.ring)</a>
 </li>
       <li><a href="automol/util.html#automol.util.ring.cycle_item_to_front">cycle_item_to_front() (in module automol.util.ring)</a>
 </li>
-      <li><a href="automol/util.html#automol.util.ring.cycle_items_to_back">cycle_items_to_back() (in module automol.util.ring)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.ring.cycle_items_to_back">cycle_items_to_back() (in module automol.util.ring)</a>
+</li>
       <li><a href="automol/util.html#automol.util.ring.cycle_items_to_front">cycle_items_to_front() (in module automol.util.ring)</a>
 </li>
       <li><a href="automol/util.html#automol.util.ring.cycle_to_optimal_split">cycle_to_optimal_split() (in module automol.util.ring)</a>
@@ -361,8 +380,16 @@ document.write(`
 <h2 id="D">D</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/util.html#automol.util.ring.distance">distance() (in module automol.util.ring)</a>
+      <li><a href="automol/util.html#automol.util.vector.dihedral_angle">dihedral_angle() (in module automol.util.vector)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.ring.distance">distance() (in module automol.util.ring)</a>
+
+      <ul>
+        <li><a href="automol/util.html#automol.util.vector.distance">(in module automol.util.vector)</a>
+</li>
+      </ul></li>
   </ul></td>
 </tr></table>
 
@@ -385,9 +412,13 @@ document.write(`
 </li>
       <li><a href="automol/util.html#automol.util.flatten">flatten() (in module automol.util)</a>
 </li>
+      <li><a href="automol/util.html#automol.util.vector.flip_if_left_handed">flip_if_left_handed() (in module automol.util.vector)</a>
+</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.formula_from_symbols">formula_from_symbols() (in module automol.util)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.vector.from_internals">from_internals() (in module automol.util.vector)</a>
 </li>
       <li><a href="automol/util.html#automol.util.tensor.from_string">from_string() (in module automol.util.tensor)</a>
 </li>
@@ -425,6 +456,8 @@ document.write(`
 </li>
         <li><a href="automol/util.html#module-automol.util.tensor">automol.util.tensor</a>
 </li>
+        <li><a href="automol/util.html#module-automol.util.vector">automol.util.vector</a>
+</li>
       </ul></li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -445,6 +478,14 @@ document.write(`
   </ul></td>
 </tr></table>
 
+<h2 id="O">O</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.orthogonalize">orthogonalize() (in module automol.util.vector)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="P">P</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -452,6 +493,8 @@ document.write(`
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.projected_central_angle">projected_central_angle() (in module automol.util.vector)</a>
+</li>
       <li><a href="automol/inchi_key.html#automol.inchi_key.protonation_indicator">protonation_indicator() (in module automol.inchi_key)</a>
 </li>
   </ul></td>
@@ -461,6 +504,10 @@ document.write(`
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.remove_duplicates_with_order">remove_duplicates_with_order() (in module automol.util)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.rotator">rotator() (in module automol.util.vector)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -476,14 +523,16 @@ document.write(`
 </li>
       <li><a href="automol/util.html#automol.util.separate_negatives">separate_negatives() (in module automol.util)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.sort_by_list">sort_by_list() (in module automol.util)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.matrix.string">string() (in module automol.util.matrix)</a>
 
       <ul>
         <li><a href="automol/util.html#automol.util.tensor.string">(in module automol.util.tensor)</a>
+</li>
+        <li><a href="automol/util.html#automol.util.vector.string">(in module automol.util.vector)</a>
 </li>
       </ul></li>
       <li><a href="automol/util.html#automol.util.tensor.string_submat_3d">string_submat_3d() (in module automol.util.tensor)</a>
@@ -497,6 +546,22 @@ document.write(`
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.translate">translate() (in module automol.util)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.unit_bisector">unit_bisector() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.vector.unit_direction">unit_direction() (in module automol.util.vector)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.unit_norm">unit_norm() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.vector.unit_perpendicular">unit_perpendicular() (in module automol.util.vector)</a>
 </li>
   </ul></td>
 </tr></table>
