--- a/genindex.html
+++ b/genindex.html
@@ -256,8 +256,332 @@ document.write(`
 <h1 id="index">Index</h1>
 
 <div class="genindex-jumpbox">
+ <a href="#A"><strong>A</strong></a>
+ | <a href="#B"><strong>B</strong></a>
+ | <a href="#C"><strong>C</strong></a>
+ | <a href="#D"><strong>D</strong></a>
+ | <a href="#E"><strong>E</strong></a>
+ | <a href="#F"><strong>F</strong></a>
+ | <a href="#I"><strong>I</strong></a>
+ | <a href="#M"><strong>M</strong></a>
+ | <a href="#N"><strong>N</strong></a>
+ | <a href="#O"><strong>O</strong></a>
+ | <a href="#P"><strong>P</strong></a>
+ | <a href="#R"><strong>R</strong></a>
+ | <a href="#S"><strong>S</strong></a>
+ | <a href="#T"><strong>T</strong></a>
+ | <a href="#U"><strong>U</strong></a>
+ | <a href="#V"><strong>V</strong></a>
  
 </div>
+<h2 id="A">A</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.angle">angle() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.vector.arbitrary_unit_perpendicular">arbitrary_unit_perpendicular() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.vector.are_parallel">are_parallel() (in module automol.util.vector)</a>
+</li>
+      <li>
+    automol.inchi_key
+
+      <ul>
+        <li><a href="automol/inchi_key.html#module-automol.inchi_key">module</a>
+</li>
+      </ul></li>
+      <li>
+    automol.util
+
+      <ul>
+        <li><a href="automol/util.html#module-automol.util">module</a>
+</li>
+      </ul></li>
+      <li>
+    automol.util.heuristic
+
+      <ul>
+        <li><a href="automol/util.html#module-automol.util.heuristic">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    automol.util.matrix
+
+      <ul>
+        <li><a href="automol/util.html#module-automol.util.matrix">module</a>
+</li>
+      </ul></li>
+      <li>
+    automol.util.ring
+
+      <ul>
+        <li><a href="automol/util.html#module-automol.util.ring">module</a>
+</li>
+      </ul></li>
+      <li>
+    automol.util.tensor
+
+      <ul>
+        <li><a href="automol/util.html#module-automol.util.tensor">module</a>
+</li>
+      </ul></li>
+      <li>
+    automol.util.vector
+
+      <ul>
+        <li><a href="automol/util.html#module-automol.util.vector">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="B">B</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.best_unit_perpendicular">best_unit_perpendicular() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.heuristic.bond_distance">bond_distance() (in module automol.util.heuristic)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.heuristic.bond_distance_limit">bond_distance_limit() (in module automol.util.heuristic)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.breakby">breakby() (in module automol.util)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.tensor.build_full_array">build_full_array() (in module automol.util.tensor)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="C">C</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.central_angle">central_angle() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.ring.cycle">cycle() (in module automol.util.ring)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.ring.cycle_item_to_front">cycle_item_to_front() (in module automol.util.ring)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.ring.cycle_items_to_back">cycle_items_to_back() (in module automol.util.ring)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.ring.cycle_items_to_front">cycle_items_to_front() (in module automol.util.ring)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.ring.cycle_to_optimal_split">cycle_to_optimal_split() (in module automol.util.ring)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.ring.cycle_to_split">cycle_to_split() (in module automol.util.ring)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="D">D</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.dihedral_angle">dihedral_angle() (in module automol.util.vector)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.ring.distance">distance() (in module automol.util.ring)</a>
+
+      <ul>
+        <li><a href="automol/util.html#automol.util.vector.distance">(in module automol.util.vector)</a>
+</li>
+      </ul></li>
+  </ul></td>
+</tr></table>
+
+<h2 id="E">E</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.ring.edges">edges() (in module automol.util.ring)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.equivalence_partition">equivalence_partition() (in module automol.util)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="F">F</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/inchi_key.html#automol.inchi_key.first_hash">first_hash() (in module automol.inchi_key)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.flatten">flatten() (in module automol.util)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.vector.flip_if_left_handed">flip_if_left_handed() (in module automol.util.vector)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.formula_from_symbols">formula_from_symbols() (in module automol.util)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.vector.from_internals">from_internals() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.tensor.from_string">from_string() (in module automol.util.tensor)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="I">I</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.is_even_permutation">is_even_permutation() (in module automol.util)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.is_odd_permutation">is_odd_permutation() (in module automol.util)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.vector.is_vector_like">is_vector_like() (in module automol.util.vector)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="M">M</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
+    module
+
+      <ul>
+        <li><a href="automol/inchi_key.html#module-automol.inchi_key">automol.inchi_key</a>
+</li>
+        <li><a href="automol/util.html#module-automol.util">automol.util</a>
+</li>
+        <li><a href="automol/util.html#module-automol.util.heuristic">automol.util.heuristic</a>
+</li>
+        <li><a href="automol/util.html#module-automol.util.matrix">automol.util.matrix</a>
+</li>
+        <li><a href="automol/util.html#module-automol.util.ring">automol.util.ring</a>
+</li>
+        <li><a href="automol/util.html#module-automol.util.tensor">automol.util.tensor</a>
+</li>
+        <li><a href="automol/util.html#module-automol.util.vector">automol.util.vector</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.move_item_to_end">move_item_to_end() (in module automol.util)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.move_item_to_front">move_item_to_front() (in module automol.util)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.move_items_to_front">move_items_to_front() (in module automol.util)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="N">N</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.ring.normalize">normalize() (in module automol.util.ring)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="O">O</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.orthogonalize">orthogonalize() (in module automol.util.vector)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="P">P</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.partner">partner() (in module automol.util)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.projected_central_angle">projected_central_angle() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/inchi_key.html#automol.inchi_key.protonation_indicator">protonation_indicator() (in module automol.inchi_key)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="R">R</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.remove_duplicates_with_order">remove_duplicates_with_order() (in module automol.util)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.require_vector_like">require_vector_like() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.vector.rotator">rotator() (in module automol.util.vector)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="S">S</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.scale_iterable">scale_iterable() (in module automol.util)</a>
+</li>
+      <li><a href="automol/inchi_key.html#automol.inchi_key.second_hash">second_hash() (in module automol.inchi_key)</a>
+</li>
+      <li><a href="automol/inchi_key.html#automol.inchi_key.second_hash_with_extension">second_hash_with_extension() (in module automol.inchi_key)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.separate_negatives">separate_negatives() (in module automol.util)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.sort_by_list">sort_by_list() (in module automol.util)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.matrix.string">string() (in module automol.util.matrix)</a>
+
+      <ul>
+        <li><a href="automol/util.html#automol.util.tensor.string">(in module automol.util.tensor)</a>
+</li>
+        <li><a href="automol/util.html#automol.util.vector.string">(in module automol.util.vector)</a>
+</li>
+      </ul></li>
+      <li><a href="automol/util.html#automol.util.tensor.string_submat_3d">string_submat_3d() (in module automol.util.tensor)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.tensor.string_submat_4d">string_submat_4d() (in module automol.util.tensor)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="T">T</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.translate">translate() (in module automol.util)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="U">U</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.unit_bisector">unit_bisector() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.vector.unit_direction">unit_direction() (in module automol.util.vector)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.vector.unit_norm">unit_norm() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.vector.unit_perpendicular">unit_perpendicular() (in module automol.util.vector)</a>
+</li>
+  </ul></td>
+</tr></table>
+
+<h2 id="V">V</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.value_similar_to">value_similar_to() (in module automol.util)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/inchi_key.html#automol.inchi_key.version_indicator">version_indicator() (in module automol.inchi_key)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 
 
                 </article>
