deploy: aa6baf12800493de3ffedcf79ef4335b56e4d35f

--- a/genindex.html
+++ b/genindex.html
@@ -263,6 +263,7 @@ document.write(`
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
  | <a href="#I"><strong>I</strong></a>
+ | <a href="#K"><strong>K</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
  | <a href="#O"><strong>O</strong></a>
@@ -298,14 +299,28 @@ document.write(`
 </li>
       </ul></li>
       <li>
+    automol.util.dict_
+
+      <ul>
+        <li><a href="automol/util.html#module-automol.util.dict_">module</a>
+</li>
+      </ul></li>
+      <li>
+    automol.util.dict_.multi
+
+      <ul>
+        <li><a href="automol/util.html#module-automol.util.dict_.multi">module</a>
+</li>
+      </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li>
     automol.util.heuristic
 
       <ul>
         <li><a href="automol/util.html#module-automol.util.heuristic">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     automol.util.matrix
 
@@ -344,13 +359,19 @@ document.write(`
 </li>
       <li><a href="automol/util.html#automol.util.heuristic.bond_distance">bond_distance() (in module automol.util.heuristic)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.heuristic.bond_distance_limit">bond_distance_limit() (in module automol.util.heuristic)</a>
 </li>
       <li><a href="automol/util.html#automol.util.breakby">breakby() (in module automol.util)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.tensor.build_full_array">build_full_array() (in module automol.util.tensor)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.dict_.by_key">by_key() (in module automol.util.dict_)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.dict_.multi.by_key_by_position">by_key_by_position() (in module automol.util.dict_.multi)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.dict_.by_value">by_value() (in module automol.util.dict_)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -359,6 +380,8 @@ document.write(`
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.vector.central_angle">central_angle() (in module automol.util.vector)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.dict_.compose">compose() (in module automol.util.dict_)</a>
 </li>
       <li><a href="automol/util.html#automol.util.ring.cycle">cycle() (in module automol.util.ring)</a>
 </li>
@@ -400,6 +423,8 @@ document.write(`
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.dict_.empty_if_none">empty_if_none() (in module automol.util.dict_)</a>
+</li>
       <li><a href="automol/util.html#automol.util.equivalence_partition">equivalence_partition() (in module automol.util)</a>
 </li>
   </ul></td>
@@ -408,14 +433,20 @@ document.write(`
 <h2 id="F">F</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.dict_.filter_by_key">filter_by_key() (in module automol.util.dict_)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.dict_.filter_by_value">filter_by_value() (in module automol.util.dict_)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.dict_.filter_keys">filter_keys() (in module automol.util.dict_)</a>
+</li>
       <li><a href="automol/inchi_key.html#automol.inchi_key.first_hash">first_hash() (in module automol.inchi_key)</a>
 </li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.flatten">flatten() (in module automol.util)</a>
 </li>
       <li><a href="automol/util.html#automol.util.vector.flip_if_left_handed">flip_if_left_handed() (in module automol.util.vector)</a>
 </li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.formula_from_symbols">formula_from_symbols() (in module automol.util)</a>
 </li>
       <li><a href="automol/util.html#automol.util.vector.from_internals">from_internals() (in module automol.util.vector)</a>
@@ -428,10 +459,14 @@ document.write(`
 <h2 id="I">I</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.dict_.invert">invert() (in module automol.util.dict_)</a>
+</li>
       <li><a href="automol/util.html#automol.util.is_even_permutation">is_even_permutation() (in module automol.util)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.dict_.multi.is_multidict">is_multidict() (in module automol.util.dict_.multi)</a>
+</li>
       <li><a href="automol/util.html#automol.util.is_odd_permutation">is_odd_permutation() (in module automol.util)</a>
 </li>
       <li><a href="automol/util.html#automol.util.vector.is_vector_like">is_vector_like() (in module automol.util.vector)</a>
@@ -439,9 +474,23 @@ document.write(`
   </ul></td>
 </tr></table>
 
+<h2 id="K">K</h2>
+<table style="width: 100%" class="indextable genindextable"><tr>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.dict_.keys_by_value">keys_by_value() (in module automol.util.dict_)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.dict_.keys_sorted_by_value">keys_sorted_by_value() (in module automol.util.dict_)</a>
+</li>
+  </ul></td>
+</tr></table>
+
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.dict_.merge_sequence">merge_sequence() (in module automol.util.dict_)</a>
+</li>
       <li>
     module
 
@@ -449,6 +498,10 @@ document.write(`
         <li><a href="automol/inchi_key.html#module-automol.inchi_key">automol.inchi_key</a>
 </li>
         <li><a href="automol/util.html#module-automol.util">automol.util</a>
+</li>
+        <li><a href="automol/util.html#module-automol.util.dict_">automol.util.dict_</a>
+</li>
+        <li><a href="automol/util.html#module-automol.util.dict_.multi">automol.util.dict_.multi</a>
 </li>
         <li><a href="automol/util.html#module-automol.util.heuristic">automol.util.heuristic</a>
 </li>
@@ -527,10 +580,14 @@ document.write(`
 </li>
       <li><a href="automol/util.html#automol.util.separate_negatives">separate_negatives() (in module automol.util)</a>
 </li>
+      <li><a href="automol/util.html#automol.util.dict_.multi.set_by_key_by_position">set_by_key_by_position() (in module automol.util.dict_.multi)</a>
+</li>
       <li><a href="automol/util.html#automol.util.sort_by_list">sort_by_list() (in module automol.util)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.dict_.sort_value_">sort_value_() (in module automol.util.dict_)</a>
+</li>
       <li><a href="automol/util.html#automol.util.matrix.string">string() (in module automol.util.matrix)</a>
 
       <ul>
@@ -549,6 +606,14 @@ document.write(`
 <h2 id="T">T</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.dict_.transform_items_to_values">transform_items_to_values() (in module automol.util.dict_)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.dict_.transform_keys">transform_keys() (in module automol.util.dict_)</a>
+</li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.dict_.transform_values">transform_values() (in module automol.util.dict_)</a>
+</li>
       <li><a href="automol/util.html#automol.util.translate">translate() (in module automol.util)</a>
 </li>
   </ul></td>
@@ -573,10 +638,20 @@ document.write(`
 <h2 id="V">V</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.dict_.value_by_unordered_key">value_by_unordered_key() (in module automol.util.dict_)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.dict_.value_in_floatkey_dct">value_in_floatkey_dct() (in module automol.util.dict_)</a>
+</li>
       <li><a href="automol/util.html#automol.util.value_similar_to">value_similar_to() (in module automol.util)</a>
 </li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
+      <li><a href="automol/util.html#automol.util.dict_.values_by_key">values_by_key() (in module automol.util.dict_)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.dict_.values_in_multilevel_dct">values_in_multilevel_dct() (in module automol.util.dict_)</a>
+</li>
+      <li><a href="automol/util.html#automol.util.dict_.values_sorted_by_key">values_sorted_by_key() (in module automol.util.dict_)</a>
+</li>
       <li><a href="automol/inchi_key.html#automol.inchi_key.version_indicator">version_indicator() (in module automol.inchi_key)</a>
 </li>
   </ul></td>
