--- a/genindex.html
+++ b/genindex.html
@@ -263,9 +263,7 @@ document.write(`
  | <a href="#D"><strong>D</strong></a>
  | <a href="#E"><strong>E</strong></a>
  | <a href="#F"><strong>F</strong></a>
- | <a href="#H"><strong>H</strong></a>
  | <a href="#I"><strong>I</strong></a>
- | <a href="#J"><strong>J</strong></a>
  | <a href="#K"><strong>K</strong></a>
  | <a href="#M"><strong>M</strong></a>
  | <a href="#N"><strong>N</strong></a>
@@ -276,38 +274,17 @@ document.write(`
  | <a href="#T"><strong>T</strong></a>
  | <a href="#U"><strong>U</strong></a>
  | <a href="#V"><strong>V</strong></a>
- | <a href="#W"><strong>W</strong></a>
  
 </div>
 <h2 id="A">A</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.add_element">add_element() (in module automol.form)</a>
-</li>
       <li><a href="automol/util.html#automol.util.vector.angle">angle() (in module automol.util.vector)</a>
 </li>
       <li><a href="automol/util.html#automol.util.vector.arbitrary_unit_perpendicular">arbitrary_unit_perpendicular() (in module automol.util.vector)</a>
 </li>
       <li><a href="automol/util.html#automol.util.vector.are_parallel">are_parallel() (in module automol.util.vector)</a>
 </li>
-      <li><a href="automol/form.html#automol.form.argsort_symbols">argsort_symbols() (in module automol.form)</a>
-</li>
-      <li><a href="automol/form.html#automol.form.atom_count">atom_count() (in module automol.form)</a>
-</li>
-      <li>
-    automol.form
-
-      <ul>
-        <li><a href="automol/form.html#module-automol.form">module</a>
-</li>
-      </ul></li>
-      <li>
-    automol.inchi_key
-
-      <ul>
-        <li><a href="automol/inchi_key.html#module-automol.inchi_key">module</a>
-</li>
-      </ul></li>
       <li>
     automol.util
 
@@ -322,8 +299,6 @@ document.write(`
         <li><a href="automol/util.html#module-automol.util.dict_">module</a>
 </li>
       </ul></li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     automol.util.dict_.multi
 
@@ -331,6 +306,8 @@ document.write(`
         <li><a href="automol/util.html#module-automol.util.dict_.multi">module</a>
 </li>
       </ul></li>
+  </ul></td>
+  <td style="width: 33%; vertical-align: top;"><ul>
       <li>
     automol.util.heuristic
 
@@ -438,12 +415,8 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.ring.edges">edges() (in module automol.util.ring)</a>
 </li>
-      <li><a href="automol/form.html#automol.form.electron_count">electron_count() (in module automol.form)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.element_count">element_count() (in module automol.form)</a>
-</li>
       <li><a href="automol/util.html#automol.util.dict_.empty_if_none">empty_if_none() (in module automol.util.dict_)</a>
 </li>
       <li><a href="automol/util.html#automol.util.equivalence_partition">equivalence_partition() (in module automol.util)</a>
@@ -460,8 +433,6 @@ document.write(`
 </li>
       <li><a href="automol/util.html#automol.util.dict_.filter_keys">filter_keys() (in module automol.util.dict_)</a>
 </li>
-      <li><a href="automol/inchi_key.html#automol.inchi_key.first_hash">first_hash() (in module automol.inchi_key)</a>
-</li>
       <li><a href="automol/util.html#automol.util.flatten">flatten() (in module automol.util)</a>
 </li>
   </ul></td>
@@ -472,19 +443,7 @@ document.write(`
 </li>
       <li><a href="automol/util.html#automol.util.vector.from_internals">from_internals() (in module automol.util.vector)</a>
 </li>
-      <li><a href="automol/form.html#automol.form.from_string">from_string() (in module automol.form)</a>
-
-      <ul>
-        <li><a href="automol/util.html#automol.util.tensor.from_string">(in module automol.util.tensor)</a>
-</li>
-      </ul></li>
-  </ul></td>
-</tr></table>
-
-<h2 id="H">H</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.heavy_atom_count">heavy_atom_count() (in module automol.form)</a>
+      <li><a href="automol/util.html#automol.util.tensor.from_string">from_string() (in module automol.util.tensor)</a>
 </li>
   </ul></td>
 </tr></table>
@@ -507,18 +466,6 @@ document.write(`
   </ul></td>
 </tr></table>
 
-<h2 id="J">J</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.join">join() (in module automol.form)</a>
-</li>
-  </ul></td>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.join_sequence">join_sequence() (in module automol.form)</a>
-</li>
-  </ul></td>
-</tr></table>
-
 <h2 id="K">K</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
@@ -534,18 +481,12 @@ document.write(`
 <h2 id="M">M</h2>
 <table style="width: 100%" class="indextable genindextable"><tr>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.match">match() (in module automol.form)</a>
-</li>
       <li><a href="automol/util.html#automol.util.dict_.merge_sequence">merge_sequence() (in module automol.util.dict_)</a>
 </li>
       <li>
     module
 
       <ul>
-        <li><a href="automol/form.html#module-automol.form">automol.form</a>
-</li>
-        <li><a href="automol/inchi_key.html#module-automol.inchi_key">automol.inchi_key</a>
-</li>
         <li><a href="automol/util.html#module-automol.util">automol.util</a>
 </li>
         <li><a href="automol/util.html#module-automol.util.dict_">automol.util.dict_</a>
@@ -599,8 +540,6 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.vector.projected_central_angle">projected_central_angle() (in module automol.util.vector)</a>
 </li>
-      <li><a href="automol/inchi_key.html#automol.inchi_key.protonation_indicator">protonation_indicator() (in module automol.inchi_key)</a>
-</li>
   </ul></td>
 </tr></table>
 
@@ -623,10 +562,6 @@ document.write(`
   <td style="width: 33%; vertical-align: top;"><ul>
       <li><a href="automol/util.html#automol.util.scale_iterable">scale_iterable() (in module automol.util)</a>
 </li>
-      <li><a href="automol/inchi_key.html#automol.inchi_key.second_hash">second_hash() (in module automol.inchi_key)</a>
-</li>
-      <li><a href="automol/inchi_key.html#automol.inchi_key.second_hash_with_extension">second_hash_with_extension() (in module automol.inchi_key)</a>
-</li>
       <li><a href="automol/util.html#automol.util.separate_negatives">separate_negatives() (in module automol.util)</a>
 </li>
       <li><a href="automol/util.html#automol.util.dict_.multi.set_by_key_by_position">set_by_key_by_position() (in module automol.util.dict_.multi)</a>
@@ -635,26 +570,16 @@ document.write(`
 </li>
       <li><a href="automol/util.html#automol.util.dict_.sort_value_">sort_value_() (in module automol.util.dict_)</a>
 </li>
-      <li><a href="automol/form.html#automol.form.sort_vector">sort_vector() (in module automol.form)</a>
-</li>
   </ul></td>
   <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.sorted_symbols">sorted_symbols() (in module automol.form)</a>
-</li>
-      <li><a href="automol/form.html#automol.form.sorted_symbols_in_sequence">sorted_symbols_in_sequence() (in module automol.form)</a>
-</li>
-      <li><a href="automol/form.html#automol.form.string">string() (in module automol.form)</a>
+      <li><a href="automol/util.html#automol.util.matrix.string">string() (in module automol.util.matrix)</a>
 
       <ul>
-        <li><a href="automol/util.html#automol.util.matrix.string">(in module automol.util.matrix)</a>
-</li>
         <li><a href="automol/util.html#automol.util.tensor.string">(in module automol.util.tensor)</a>
 </li>
         <li><a href="automol/util.html#automol.util.vector.string">(in module automol.util.vector)</a>
 </li>
       </ul></li>
-      <li><a href="automol/form.html#automol.form.string2">string2() (in module automol.form)</a>
-</li>
       <li><a href="automol/util.html#automol.util.tensor.string_submat_3d">string_submat_3d() (in module automol.util.tensor)</a>
 </li>
       <li><a href="automol/util.html#automol.util.tensor.string_submat_4d">string_submat_4d() (in module automol.util.tensor)</a>
@@ -710,16 +635,6 @@ document.write(`
       <li><a href="automol/util.html#automol.util.dict_.values_in_multilevel_dct">values_in_multilevel_dct() (in module automol.util.dict_)</a>
 </li>
       <li><a href="automol/util.html#automol.util.dict_.values_sorted_by_key">values_sorted_by_key() (in module automol.util.dict_)</a>
-</li>
-      <li><a href="automol/inchi_key.html#automol.inchi_key.version_indicator">version_indicator() (in module automol.inchi_key)</a>
-</li>
-  </ul></td>
-</tr></table>
-
-<h2 id="W">W</h2>
-<table style="width: 100%" class="indextable genindextable"><tr>
-  <td style="width: 33%; vertical-align: top;"><ul>
-      <li><a href="automol/form.html#automol.form.without">without() (in module automol.form)</a>
 </li>
   </ul></td>
 </tr></table>
